--- a/Source/Manager/nbproject/project.properties
+++ b/Source/Manager/nbproject/project.properties
@@ -30,14 +30,14 @@ dist.jar=${dist.dir}/Project_ATM.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-beanutils-1.7.jar=src/Mylib/commons-beanutils-1.7.jar
-file.reference.commons-collections.jar=src/Mylib/commons-collections.jar
-file.reference.commons-digester.jar=src/Mylib/commons-digester.jar
-file.reference.commons-logging.jar=src/Mylib/commons-logging.jar
-file.reference.groovy-all-1.7.5.jar=src/Mylib/groovy-all-1.7.5.jar
-file.reference.jasperreports-3.7.6.jar=src/Mylib/jasperreports-3.7.6.jar
-file.reference.jcalendar-1.4.jar=src/Mylib/jcalendar-1.4.jar
-file.reference.sqljdbc4.jar=src/Mylib/sqljdbc4.jar
+file.reference.commons-beanutils-1.7.jar=E:\\Java\\lib\\commons-beanutils-1.7.jar
+file.reference.commons-collections.jar=E:\\Java\\lib\\commons-collections.jar
+file.reference.commons-digester.jar=E:\\Java\\lib\\commons-digester.jar
+file.reference.commons-logging.jar=E:\\Java\\lib\\commons-logging.jar
+file.reference.groovy-all-1.7.5.jar=E:\\Java\\lib\\groovy-all-1.7.5.jar
+file.reference.jasperreports-3.7.6.jar=E:\\Java\\lib\\jasperreports-3.7.6.jar
+file.reference.jcalendar-1.4.jar=E:\\Java\\lib\\jcalendar-1.4.jar
+file.reference.sqljdbc4.jar=E:\\Java\\lib\\sqljdbc4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -54,6 +54,7 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.7
