--- a/Source/User/nbproject/project.properties
+++ b/Source/User/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=User_ATM
+application.vendor=Phong
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,15 +27,16 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/User_ATM.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.commons-beanutils-1.7.jar=src\\MyLib\\commons-beanutils-1.7.jar
-file.reference.commons-collections.jar=src\\MyLib\\commons-collections.jar
-file.reference.commons-digester.jar=src\\MyLib\\commons-digester.jar
-file.reference.commons-logging.jar=src\\MyLib\\commons-logging.jar
-file.reference.groovy-all-1.7.5.jar=src\\MyLib\\groovy-all-1.7.5.jar
-file.reference.jasperreports-3.7.6.jar=src\\MyLib\\jasperreports-3.7.6.jar
-file.reference.jcalendar-1.4.jar=src\\MyLib\\jcalendar-1.4.jar
-file.reference.sqljdbc4.jar=src\\MyLib\\sqljdbc4.jar
+file.reference.commons-beanutils-1.7.jar=E:\\Java\\lib\\commons-beanutils-1.7.jar
+file.reference.commons-collections.jar=E:\\Java\\lib\\commons-collections.jar
+file.reference.commons-digester.jar=E:\\Java\\lib\\commons-digester.jar
+file.reference.commons-logging.jar=E:\\Java\\lib\\commons-logging.jar
+file.reference.groovy-all-1.7.5.jar=E:\\Java\\lib\\groovy-all-1.7.5.jar
+file.reference.jasperreports-3.7.6.jar=E:\\Java\\lib\\jasperreports-3.7.6.jar
+file.reference.jcalendar-1.4.jar=E:\\Java\\lib\\jcalendar-1.4.jar
+file.reference.sqljdbc4.jar=E:\\Java\\lib\\sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -49,6 +51,7 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.7
