--- a/Source/Manager/nbproject/project.properties
+++ b/Source/Manager/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.commons-logging.jar=src/Mylib/commons-logging.jar
 file.reference.groovy-all-1.7.5.jar=src/Mylib/groovy-all-1.7.5.jar
 file.reference.jasperreports-3.7.6.jar=src/Mylib/jasperreports-3.7.6.jar
 file.reference.jcalendar-1.4.jar=src/Mylib/jcalendar-1.4.jar
+file.reference.rs2xml.jar=E:\\rs2xml.jar
 file.reference.sqljdbc4.jar=src/Mylib/sqljdbc4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -50,10 +51,12 @@ javac.classpath=\
     ${file.reference.groovy-all-1.7.5.jar}:\
     ${file.reference.jasperreports-3.7.6.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.7
